--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  phone_form_field: ^9.2.4
   cupertino_icons: ^1.0.6
   better_router: ^2.1.0
   flutterflow_ui: ^0.2.0+1
@@ -41,6 +42,7 @@ dependencies:
   crypto: ^3.0.3
   shrink_sidemenu: ^2.0.0+2-null-safety
   google_fonts: 4.0.3
+  confirm_dialog: ^1.0.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
